# user-guide

./: .gitignore  Makefile.am  README.md  configure.ac  license.txt
doc/: Makefile.am
doc/userguide/: ch-estadv.aux  ch-estbase.aux  ch-inst.aux  ch-intro.aux  ch-ramsey.aux  ch-soladv.aux  ch-solbase.aux  test.tex
doc/userguide/AIM/: Dynare AIM use Doc.html  Dynare AIM use Doc.mht
doc/userguide/models/: RBC_DataGen.mod  RBC_Est.mod  RBC_Monop_Det.mod  RBC_Monop_JFV.mod  fs2000ns.mod  fs2000ns_steadystate.m
